signalbox/static/css/signalbox.css
.table h4 {margin-top:0;}

.rotate {
    -webkit-transform: rotate(25deg); -moz-transform: rotate(25deg); -ms-transform: rotate(25deg); -o-transform: rotate(25deg); transform: rotate(25deg);
    margin-bottom:2em;
}

.btn-group {
    display: inline-block;
}
.colorhighlight {
  color: #f07b05 !important;
}
body {
  padding-top: 120px;
  padding-bottom: 40px;
}
/* FOR QUESTIONNAIRES/FORMS */
.not_applicable {
  display: block !important;
  float: right !important;
  color: #888;
}
label {
  font-style: normal;
  font-weight: normal;
  margin-left: 0px;
}
.page_title {
  color: #808080;
  border-bottom: 1px solid #D3D3D3;
  font-variant: small-caps;
}
.progress {
  margin-top: 1em;
  font-size: .8em;
}
.form_field_wrapper textarea {
  width: 40em;
}
.countrycode {
  width: 3em;
}
label {
  font-weight: bold;
  text-align: left;
}
.form_field_wrapper label {
  font-weight: normal;
}
.form_field_field li {
  list-style-type: none !important;
}
.bigModal {
  width: 1240px;
  margin-left: -470px;
}
.modal-body {
  max-height: 400px;
}
.radiotable {
  text-align: center;
}
.radiotable label {
  padding-left: 1em;
  padding-right: 1em;
}
.rowhighlight {
  background-color: #f8f8f8;
}

